bundle/tests/scorecard/kuttl/network-policy/11-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: test
          podSelector: {}
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      rc.app.stacks/name: network-policy-rc
  policyTypes:
    - Ingress
